# src/main/resources/static/api.yml
@@ -4,11 +4,16 @@ info:
   description: Endpoints to retrieve, compare, and analyze public holiday data for multiple countries, including recent holidays, non-weekend counts, and common holidays.
   version: 1.0.0
 servers:
-  - url: http://localhost:8888/
+  - url: http://localhost:8080/
     description: Local development
+tags:
+  - name: Holiday api
+    description: Endpoints for holiday details
 paths:
   /api/v1/holidays/recent:
     get:
+      tags:
+        - Holiday
       operationId: getRecentHolidays
       summary: Last 3 celebrated holidays for a country
       parameters:
@@ -17,7 +22,9 @@ paths:
           required: true
           schema:
             type: string
+            pattern: '^[A-Za-z]{2}$'
           example: US
+          description: Two letter country code is required
       responses:
         '200':
           description: Recent holidays
@@ -31,6 +38,8 @@ paths:
           description: Invalid country code
   /api/v1/holidays/non-weekend-count:
     get:
+      tags:
+        - Holiday
       operationId: getNonWeekendHolidayCounts
       summary: Non-weekend holiday counts for countries in a year (sorted descending)
       parameters:
@@ -45,7 +54,10 @@ paths:
           required: true
           schema:
             type: string
+            minLength: 2
+            pattern: '^([A-Za-z]{2})(,[A-Za-z]{2})*$'
           example: US,CA,GB
+          description: "Comma-separated list of two-letter country codes (ISO 3166-1 alpha-2)."
       responses:
         '200':
           description: Country counts
@@ -59,6 +71,8 @@ paths:
           description: Invalid parameters
   /api/v1/holidays/common:
     get:
+      tags:
+        - Holiday
       operationId: getCommonHolidays
       summary: Deduplicated common holidays between two countries in a year
       parameters:
@@ -73,13 +87,17 @@ paths:
           required: true
           schema:
             type: string
+            pattern: '^[A-Za-z]{2}$'
           example: US
+          description: "First country code. Must not be the same as country2."
         - name: country2
           in: query
           required: true
           schema:
             type: string
+            pattern: '^[A-Za-z]{2}$'
           example: CA
+          description: "Second country code. Must not be the same as country1."
       responses:
         '200':
           description: Common holidays
